<resources>
    <string name="app_name">Calculator_v1</string>
    <string name="_point">.</string>
    <string name="_add">+</string>
    <string name="_subtract">-</string>
    <string name="_equally">=</string>
    <string name="_multiplication">*</string>
    <string name="_division">/</string>
    <string name="_percent">%</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>